working on wifi

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,6 +1,21 @@
 {
+    "config": {
+        "hostname": {
+            "help": "The demo will try to connect to this MQTT broker.",
+            "value": "\"192.168.1.176\""
+        },
+        "use-tls-socket": {
+            "value": false
+        }
+    },
     "target_overrides": {
         "*": {
+            "nsapi.default-wifi-security": "WPA_WPA2",
+            "nsapi.default-wifi-ssid": "\"brackenhillc\"",
+            "nsapi.default-wifi-password": "\"1broches\"",
+            "mbed-trace.enable": false,
+            "mbed-trace.max-level": "TRACE_LEVEL_DEBUG",
+            "rtos.main-thread-stack-size": 8192,
             "platform.minimal-printf-enable-floating-point": true,
             "platform.minimal-printf-set-floating-point-max-decimals": 2,
             "target.printf_lib":"std",
